# STEVE

./: README.md
client/: IMPLEMENTATION_STATUS.md  README.md  pyproject.toml
client/docs/: configuration.md  index.md  installation.md  quickstart.md  troubleshooting.md
client/docs/advanced/: thread-safety.md
client/docs/api/: client.md
client/docs/tutorials/: data-recording.md  gymnasium-rl.md  isaac-sim-integration.md  mujoco-integration.md  parameter-sweeps.md  parameter-tuning.md  quickstart.md  ros-integration.md
client/examples/: basic_connection.py  data_recording.py  gymnasium_rl.py  isaac_sim_integration.py  mujoco_simulation.py  streaming_data.py
client/pysteve/: __init__.py
client/pysteve/control/: __init__.py  data_recorder.py  parameter_sweep.py  realtime_tuner.py
client/pysteve/core/: __init__.py  async_client.py  client.py  config.py  exceptions.py  streaming.py
client/pysteve/integrations/: __init__.py
client/pysteve/integrations/gymnasium/: __init__.py  base_env.py  reward_functions.py  wrappers.py
client/pysteve/integrations/isaac/: __init__.py  connector.py  multi_valve_coordinator.py  scene_builder.py
client/pysteve/integrations/mujoco/: __init__.py  actuator.py  mjcf_builder.py  sync_controller.py
client/pysteve/utils/: __init__.py  plotting.py  ros_bridge.py  stream_buffer.py  validation.py
docs/: README.md  next-steps.md
docs/cli/: cli-reference.md
docs/firmware/: firmware-installation.md
docs/getting-started/: getting-started.md
docs/html/: web-interface-guide.md
docs/odrive/: odriveparam.md
docs/rest/: rest-api-examples.md  rest-api.md
docs/stream/: streaming-examples.md  streaming-guide.md
firmware/: .clang-format  .editorconfig  Makefile  README.md
firmware/common/: status_strings.c
firmware/inc/: board_config.h  status.h  stm32h7xx_hal_conf.h
firmware/inc/app/: cli.h  perfmon.h  performance_manager.h  system_manager.h
firmware/inc/bsp/: board.h
firmware/inc/config/: all.h  board.h  core.h  network.h  nvm.h  valve.h
firmware/inc/drivers/: fdcan.h  flash_utils.h  uart.h
firmware/inc/network/: http.h  http_fs_data.h  http_server.h  manager.h  net_init.h  network_manager.h  network_nvm.h  nvm.h  ping.h  rest.h  rest_api.h  stream.h  stream_server.h
firmware/inc/odrive/: odrive_manager.h
firmware/inc/protocols/: can_simple.h
firmware/inc/valve/: valve_config.h  valve_filters.h  valve_haptic.h  valve_manager.h  valve_nvm.h  valve_physics.h  valve_presets.h
firmware/ld/: STM32H753ZITx_FLASH.ld
firmware/ports/lwip/: README.md  ethernetif.c  ethernetif.h  lwipopts.h  lwippools.h  sys_arch.c
firmware/scripts/: check_defines.py  check_layering.sh  valve_tune.py
firmware/src/: hal_timebase_override.c  main.c  stm32h7xx_it.c  syscalls.c  system_stm32h7xx.c
(+32 files in other folders)
